--- a/index.html
+++ b/index.html
@@ -4,60 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://kit.fontawesome.com/80833262c1.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <title>Weather App</title>
+    <!-- Font Awesome link-->
+    <script src="https://kit.fontawesome.com/ca89a4b9f5.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap Link-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- My style sheet -->
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Weather Dashboard</title>
 </head>
 <body>
 
-    <header class="header">
-        <h1>Weather Dashboard</h1>
-    </header>
-
-    <div class="container">
-        <div class="search">
-            <div class="row">
-                <h1>Search for a City:</h1>
-            </div>
-            <div class="row">
-                <input type="text" class="searchInput" placeholder="Seattle">
-                <button type="submit" class="searchBtn">
-                <i class="fas fa-search"></i>
-                </button>
-            </div>
-            <div class="historyItems"></div>
-        </div>
-        <div class="col-two-container">
-            <div class="forecast">
-                <div class="row">
-                    <h1 class="cityName">City Name</h1>
-                    <h1 class="currentDate"></h1>
-                    <img class="weatherIcon"></img>
-                </div>
-                <div class="row">
-                    <p class="temp">Temperature:</p>
-                </div>
-                <div class="row">
-                    <p class="humidity">Humidity:</p>
-                </div>
-                <div class="row">
-                    <p class="windSpeed">Wind Speed:</p>
-                </div>
-                <div class="row">
-                    <p class="uvIndex">UV Index:</p>
-                </div>
-            </div>
-
-            <div class="five-day-container">
-                <h1>5-Day Forecast:</h1>
-                <div class="card-row">
-                </div>
-            </div>
+    <!-- Main heading -->
+    <div class="bg-dark pt-2 pb-2"> 
+        <div class="container">
+            <h1 class="text-center text-white">Weather Dashboard</h1>
         </div>
     </div>
-    
+    <!-- End Main heading -->
+
+    <!-- Start container -->
+    <div class="container-fluid"> 
+
+        <!-- Start row -->
+        <div class="row"> 
+
+            <!-- Start column -->
+            <div class="col-lg-3 bg-light pt-3 pb-3"> 
+
+                <h5>Search for a city:</h5>
+
+                <!-- Start input group -->
+                <div class="input-group mb-3"> 
+                    <input id="searchTerm" type="text" class="form-control" placeholder="City name..." class="input-group-append">
+                    <button id="searchBtn" class="btn btn-primary" type="button" id="button-addon2"><i class="far fa-search"></i></button>
+                </div>
+                <!-- End input group -->   
+
+                <!-- Start card -->
+                <div class="card"> 
+                    <ul class="list-group list-group-flush list">
+                    </ul>
+                </div> 
+                <!-- End card -->
+            </div> 
+            <!-- End column -->
+
+            <!-- Start column -->
+            <div class="col-lg-9"> 
+                <div id="currentCity" class="mt-4">
+                    
+                </div>
+            </div> 
+            <!-- End column -->
+        </div> 
+        <!-- End row -->
+
+        <!-- Start forecast container -->
+        <div class="mt-4 col-md-12"> 
+
+            <h5 id="forecastH5" class="mt-3 hide">5-Day Forecast:</h5>
+
+            <!-- Start row -->
+            <div id="forecast" class="row"> 
+
+
+            </div> 
+            <!-- End row -->
+        </div> 
+        <!-- End forecast container -->
+    </div> 
+    <!-- End container -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
-<script src="assets/js/weather.js"></script>
 </html>
